canary-deployment/canary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v2
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
      - name: myapp
        image: jspawar80/canary-deployment:v2
        ports:
        - containerPort: 3000
