canary-deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
  namespace: default
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
      - name: myapp
        image: jspawar80/canary-deployment:v1
        ports:
        - containerPort: 3000


---
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: myapp
