canary-deployment/destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp
  namespace: default
spec:
  host: myapp
  subsets:
  - name: v1
    labels:
      app: v1
  - name: v2
    labels:
      app: v2
